[tool.pyright]
venvPath = "."
venv = ".venv"
useLibraryCodeForTypes = false

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"

[tool.poetry]
name = "computer-use-demo"
version = "0.1.0"
description = ""
authors = ["zacchaeus <zacchaeuschok2014@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
ruff = "^0.9.2"
pre-commit = "^4.0.1"
streamlit = "^1.41.1"
anthropic = "^0.43.1"
jsonschema = "^4.23.0"
boto3 = "^1.36.2"
google-auth = "^2.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
